New TIP #514 (just raw concept yet). Clarifications for TIP #494

--- a/tip/494.md
+++ b/tip/494.md
@@ -25,18 +25,60 @@ Many Tcl API functions and struct fields have _int_ parameters, which don't prov
 
   * All memory-related functions, such as Tcl\_Alloc\(\), will change its size argument from _int_ to _size\_t_, and its "char *" arguments to "void *"
   
-  * Many functions, which have size parameters of type _int_ (but NOT _int_ *) will change to type size\_t
+  * Many functions, which have size parameters of type _int_ (but NOT _int *_) will change to type _size\_t_
 
-  * On 32-bit platforms, this is all 100% upwards binary compatible, provided no _internal_ API is used (since some internal structs has incompatible but externally invisible changes)
+  * All _ClientData_ type arguments will be changed to _void *_ arguments. This is actually the same type, but it prevents the need for type-casts in some situations.
 
-  * On 64-bit platforms, those changes cause binary incompatibility, but source compatibility is retained. Therefore the TCL_MAGIC value needs to change, so extensions compiled using Tcl 9 headers will not load in Tcl 8 and reverse.
+  * Provide a compilation option -D_TCL\_8\_COMPAT_, which provides fully source compatibility. Using this option, extensions compile and run fine using either Tcl 8 or Tcl 9 headers.
+    More explanation below.
 
-TODO explain changes in more detail.
+On 32-bit platforms, this is all 100% upwards binary compatible, provided no _internal_ API is used (since some internal structs might have incompatible but externally invisible changes)
+
+On 64-bit platforms, those changes cause binary incompatibility. Therefore the TCL_MAGIC value needs to change, so extensions compiled using Tcl 9 headers will not load in Tcl 8 and reverse.
+
+
+# Implications
+
+Although those changes are binary compatible on 32-bit platforms, there is a small potential source incompatibility.
+There are 10 functions which previously had an _int_ return argument, which is changed to _size\_t_. This signed/unsigned change might lead to subtle difference in behavior.
+
+The 10 functions are:
+
+  * Tcl_Gets
+
+  * Tcl_GetsObj
+
+  * Tcl_Read
+
+  * Tcl_ReadChars
+
+  * Tcl_ReadRaw
+
+  * Tcl_Write
+
+  * Tcl_WriteChars
+
+  * Tcl_WriteObj
+
+  * Tcl_WriteRaw
+
+  * Tcl_Ungets
+
+If the return value of such function is directly used in a compare, this could lead to the use of an unsigned compare in stead of a signed compare.
+If you compile your extension with -D_TCL\_8\_COMPAT_, those 10 functions will be changed to wrapper macro's which makes everything behave as if those functions return Tcl_WideInt. That's the easiest way to resolve this potential problem.
+
+There are 2 other ways to make this change, which can do it without the use of the _TCL\_8\_COMPAT_ macro:
+
+  * Add _1_ to the left and right hand side of the comparison. E.g. [as here](https://core.tcl.tk/tk/fdiff?v1=100235897e9cf359&v2=9cf86629040df0d3)
+
+  * Don't compare to -1 using < or >, but only using == or !=. You can get rid of the compiler warning using casts to _size\_t_. E.g. [as here](https://core.tcl.tk/tk/fdiff?v1=207c608cec63f8f0&v2=e2e5d2322beea420)
+
+Tk and sqlite are already converted to make full use of TIP #494. Other extensions included with Tcl (e.g. tdbc) are unaffected.
 
 # Implementation
 
-An implementation of this TIP can be found in the [memory-API branch]
-(https://core.tcl.tk/tcl/timeline?r=memory-API). (still in development)
+The implementation of this TIP can be found in the [memory-API branch]
+(https://core.tcl.tk/tcl/timeline?r=memory-API).
 
 # Copyright
 
