--- a/tip/514.md
+++ b/tip/514.md
@@ -16,28 +16,71 @@ At the script level it should not be relevant whether the platform is 32-bit or 
 
 Originally, the int() math function was meant to be provide compatibility when introducing big integers using the libtommath library.
 Code depending on the modulo behavior of all expressions could use the int() function to make the behavior the same as in Tcl 8.4 again.
+In practice, the int() math function is rarely used.
 
 # Rationale
 
-TODO
+Some examples:
+
+<pre>
+% string is int -4294967296
+0
+% string is int -4294967295
+1
+% string is int 4294967295
+1
+% string is int 4294967296
+0
+</pre>
+
+So, valid integers appear to range from -(2^32-1) to +2^32-1.  Most people learn in school that 32-bit integers range from -2^31 to 2^31-1. Are Tcl's integers 33-bit, but then excluding -4294967296?
+
+<pre>
+% string is wide -18446744073709551616
+0
+% string is wide -18446744073709551615
+1
+% string is wide 18446744073709551615
+1
+% string is wide 18446744073709551616
+0
+</pre>
+
+So, valid wide integers appear to range from -2^64+1 to +2^64-1.  Most people learn in school that 64-bit integers range from -2^63 to 2^63-1. Are Tcl's wide integers 65-bit, but then excluding -18446744073709551616?
+
+
+<pre>
+% expr int(2147483648)          ; #on LP64/ILP64 platforms
+2147483648
+% expr int(2147483648)          ; #on other platforms
+-2147483648
+% expr int(9223372036854775808) ; #on LP64/ILP64 platforms
+-9223372036854775808
+% expr int(9223372036854775808) ; #on other platforms
+0
+% expr wide(9223372036854775808); #all platforms
+-9223372036854775808
+</pre>
+
+So, int() does either 32-bit or 64-bit truncation, but the highest left-over bit becomes the sign-bit. wide() does 64-bit truncation.
 
 # Specification
 
- * On all platforms, the int() math function will do 64-bit truncation. This means that on 64-bit Linux (for example)
-   nothing changes, but on 32-bit Linux and on Windows the behavior will be exactly the same as on 64-bit Linux.
-   int() will become synonym for wide(). The wide() function will become deprecated in Tcl 9.0, but it will not be
-   removed yet.
+ * On all platforms, the int() math function is modified to do 64-bit truncation, as it already does on [LP64/ILP64](https://en.wikipedia.org/wiki/64-bit_computing#64-bit_data_models) systems (e.g. 64-bit Linux).
+   int() will thus become synonym for wide(). The wide() function will become deprecated in Tcl 9.0, but it will not be removed yet.
 
- * The range of "string is integer" is changed to match the range of the int() math function. So this function will report
-   true if the number is in the range -9223372036854775808..9223372036854775807. The "string is wideinteger" command will
-   be deprecated in Tcl 9.0, but it will not be removed yet.
+ * The ranges of "string is integer" and "string is wideinteger" are changed to match the range of the int()/wide() math function.
+   So these functions will report true (1) if the number is in the range -9223372036854775808..9223372036854775807.
+   The "string is wideinteger" command will be deprecated in Tcl 9.0, but it will not be removed yet.
 
- * The C function Tcl_GetIntFromObj() will be changed to return TCL_OK if the Tcl_Obj contains values in the range of 2147483648..4294967295. So,
+ * The C function Tcl\_GetIntFromObj() is changed to return TCL\_OK if the Tcl_Obj contains values in the range of 2147483648..4294967295. So,
    it succeeds if the number fits in either a platform "int", either a platform "unsigned int" type.
+
+ * The C function Tcl\_GetLongFromObj() is changed to behave like Tcl\_GetIntFromObj() if sizeof(long) == sizeof(ing), and to behave like Tcl\_GetWideIntFromObj() if sizeof(long) == sizeof(Tcl_WideInt)
 
 # Implementation
 
-Currently, the proposed implementation is available in [all-wideint branch]
+Currently, the proposed implementation is available in the [all-wideint branch]
 (https://core.tcl.tk/tcl/timeline?r=all-wideint). (WIP)
 
 # Copyright
