missing minus sign (quite important ....)

--- a/tip/514.md
+++ b/tip/514.md
@@ -73,7 +73,7 @@ So, int() does either 32-bit or 64-bit truncation, but the highest left-over bit
    So these functions will report true (1) if the number is in the range -9223372036854775808..9223372036854775807.
    The "string is wideinteger" command will be deprecated in Tcl 9.0, but it will not be removed yet.
 
- * The C function Tcl\_GetIntFromObj() is changed to return TCL\_OK if the Tcl_Obj contains values in the range of 2147483648..4294967295. So,
+ * The C function Tcl\_GetIntFromObj() is changed to return TCL\_OK if the Tcl_Obj contains values in the range of -2147483648..4294967295. So,
    it succeeds if the number fits in either a platform "int", either a platform "unsigned int" type.
 
  * The C function Tcl\_GetLongFromObj() is changed to behave like Tcl\_GetIntFromObj() if sizeof(long) == sizeof(ing), and to behave like Tcl\_GetWideIntFromObj() if sizeof(long) == sizeof(Tcl_WideInt)
