--- a/tip/514.md
+++ b/tip/514.md
@@ -46,7 +46,7 @@ So, valid integers appear to range from -(2^32-1) to +2^32-1.  Most people learn
 0
 </pre>
 
-So, valid wide integers appear to range from -2^64+1 to +2^64-1.  Most people learn in school that 64-bit integers range from -2^63 to 2^63-1. Are Tcl's wide integers 65-bit, but then excluding -18446744073709551616?
+So, valid wide integers appear to range from -(2^64-1) to +2^64-1.  Most people learn in school that 64-bit integers range from -2^63 to 2^63-1. Are Tcl's wide integers 65-bit, but then excluding -18446744073709551616?
 
 
 <pre>
@@ -73,15 +73,18 @@ So, int() does either 32-bit or 64-bit truncation, but the highest left-over bit
    So these functions will report true (1) if the number is in the range -9223372036854775808..9223372036854775807.
    The "string is wideinteger" command will be deprecated in Tcl 9.0, but it will not be removed yet.
 
- * The C function Tcl\_GetIntFromObj() is changed to return TCL\_OK if the Tcl_Obj contains values in the range of -2147483648..4294967295. So,
+ * The C function Tcl\_GetIntFromObj() is changed to return TCL\_OK if the Tcl_Obj contains a value in the range of -2147483648..4294967295. So,
    it succeeds if the number fits in either a platform "int", either a platform "unsigned int" type.
 
- * The C function Tcl\_GetLongFromObj() is changed to behave like Tcl\_GetIntFromObj() if sizeof(long) == sizeof(ing), and to behave like Tcl\_GetWideIntFromObj() if sizeof(long) == sizeof(Tcl_WideInt)
+ * The C function Tcl\_GetWideIntFromObj() is changed to return TCL\_OK if the Tcl_Obj contains a value in the range of -9223372036854775808..9223372036854775807.
+   So, it succeeds if the number fits in a Tcl_WideInt.
+
+ * The C function Tcl\_GetLongFromObj() is changed to behave like Tcl\_GetIntFromObj() if sizeof(long) == sizeof(int), and to behave like Tcl\_GetWideIntFromObj() if sizeof(long) == sizeof(Tcl_WideInt)
 
 # Implementation
 
 Currently, the proposed implementation is available in the [all-wideint branch]
-(https://core.tcl.tk/tcl/timeline?r=all-wideint). (WIP)
+(https://core.tcl.tk/tcl/timeline?r=all-wideint).
 
 # Copyright
 
