TIP 478 implementation committed

--- a/tip/478.md
+++ b/tip/478.md
@@ -1,7 +1,7 @@
 # TIP 478: Add Expected Class Level Behaviors to oo::class
 	Author:         Gerald Lester <Gerald.Lester@gmail.com>
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        18-Oct-2017
