New TIP #515. Fix link in TIP #514.

--- a/tip/514.md
+++ b/tip/514.md
@@ -93,7 +93,7 @@ So, int() does either 32-bit or 64-bit truncation, but the highest left-over bit
 
 # Implementation
 
-Currently, the proposed implementation is available in the [all-wideint branch]
+Currently, the proposed implementation is available in the [tip-514 branch]
 (https://core.tcl.tk/tcl/timeline?r=tip-514).
 
 # Copyright
