TIP 516: xref to implementation and some notes based on that experience

--- a/tip/516.md
+++ b/tip/516.md
@@ -46,9 +46,20 @@ This will add two new methods to the `::oo::Slot` class:
     error to remove a non-present item. If there are no such items in the
     arguments, this does nothing; it is not an error to remove no items.
 
+To support this, an extra internal operation is added:
+
+  * _slot_ `Resolve` _list_
+
+    This returns the items of _list_ with a resolution operation applied to
+    them. The meaning of this operation will depend on the kind of values held
+    in a particular slot, but for a slot of classes then the relevant type of
+    resolution would be command resolution. (The main slot method
+    implementation classes will ensure that this method is always called in a
+    context where the resolution context is that of the caller.)
+
 # Implementation
 
-To be done...
+See the `tip-516` branch.
 
 # Copyright
 
