Simplify the resolution protocol

--- a/tip/516.md
+++ b/tip/516.md
@@ -48,11 +48,11 @@ This will add two new methods to the `::oo::Slot` class:
 
 To support this, an extra internal operation is added:
 
-  * _slot_ `Resolve` _list_
+  * _slot_ `Resolve` _slotElement_
 
-    This returns the items of _list_ with a resolution operation applied to
-    them. The meaning of this operation will depend on the kind of values held
-    in a particular slot, but for a slot of classes then the relevant type of
+    This returns the _slotElement_ with a resolution operation applied to it.
+    The meaning of this operation will depend on the kind of values held in a
+    particular slot, but for a slot of classes then the relevant type of
     resolution would be command resolution. (The main slot method
     implementation classes will ensure that this method is always called in a
     context where the resolution context is that of the caller.)
