TIP 430 Accepted (fixing metadata fumble)

--- a/tip/430.md
+++ b/tip/430.md
@@ -3,9 +3,9 @@
 	Author:         Donal Fellows <donal.k.fellows@manchester.ac.uk>
 	Author:         Poor Yorick <tk.tcl.tip@pooryorick.com>
 	Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           Accepted
+	Vote:           Done
 	Created:        03-Sep-2014
 	Post-History:
 	Keywords:       virtual filesystem,zip,tclkit,boot,bootstrap
