TIP 430 Final; JN merged implementation

--- a/tip/430.md
+++ b/tip/430.md
@@ -3,7 +3,7 @@
 	Author:         Donal Fellows <donal.k.fellows@manchester.ac.uk>
 	Author:         Poor Yorick <tk.tcl.tip@pooryorick.com>
 	Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        03-Sep-2014
