--- a/tip/394.md
+++ b/tip/394.md
@@ -29,10 +29,10 @@ well:
 
  * even more buttons...
 
-On Linux platform, bind'ing on <Button> will catch all\(?\) or these \(and "%b"
+On Linux platform, bind'ing on `<Button>` will catch all\(?\) or these \(and "%b"
 gives an ordinal number which allows for some heuristic recognition\). But even
-on Linux, it is not possible to bind specifically to e.g. <Button-8>, or to
-<B8-Motion> kind of events.
+on Linux, it is not possible to bind specifically to e.g. `<Button-8>`, or to
+`<B8-Motion>` kind of events.
 
 On Windows platform, the system offers different types of events for certain
 different controls. An app would e.g. register extra to receive horizontal
@@ -48,10 +48,10 @@ and 5 will need to be preserved, maybe as well as the buttons 6 and 7 for
 horizontal scrolling.
 
 Any extra buttons could then be either named "X1", "X2", "X3", ...  or
-numbered 8, 9, 10, ...  which would reflect as bind events <Button-8> or
-<Button-X1>, but also <B8-Motion> or <BX1-Motion>
+numbered 8, 9, 10, ...  which would reflect as bind events `<Button-8>` or
+`<Button-X1>`, but also `<B8-Motion>` or `<BX1-Motion>`.
 
-For horizontal scrolling, <MouseWheelHoriz> would be the preferred way for
+For horizontal scrolling, `<MouseWheelHoriz>` would be the preferred way for
 cross-platform apps, but depending on whether "4 and 5" button events are
 already emulated for scrolling on windows, it would be worthwhile to also
 emulate "6 and 7" button events for horizontal wheel-activity.
