--- a/tip/452.md
+++ b/tip/452.md
@@ -30,7 +30,7 @@ easier to create isolated unit tests of Tcl code.
 # Proposal
 
 That a framework to easily create test stubs/mocks of
-Tcl commands be added to the **tcltest_ package.  Additionally, to facilitate the creation of automated test for legacy Tcl code.  Commands supporting _test
+Tcl commands be added to the **tcltest** package.  Additionally, to facilitate the creation of automated test for legacy Tcl code.  Commands supporting _test
 seam_ creation and specification would also be included proposed package.
 
 ## Description
@@ -67,7 +67,7 @@ following commands:
 
 # Reference Implementation
 
-See the tip-452 branch \(<http://core.tcl.tk/tcl/timeline?n=100&r=tip-452\),> in particular, see http-tip-452.test for an example of using the procedures added by this package.
+See the [tip-452 branch](http://core.tcl.tk/tcl/timeline?n=100&r=tip-452), in particular, see `http-tip-452.test` for an example of using the procedures added by this package.
 
 ## Origins of Reference Implementation
 
