--- a/tip/517.md
+++ b/tip/517.md
@@ -1,8 +1,8 @@
 # TIP 517: Add -activerelief Configuration Option to the menu widget
 	Author:         Francois Vogel <fvogelnew1@free.fr>
-	State:          Draft
+	State:          Voting
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        13-Sept-2018
 	Post-History:
 	Keywords:       tk menu
