svg usage added and discussion updated

--- a/tip/507.md
+++ b/tip/507.md
@@ -23,12 +23,23 @@ There is already an tk image extension at https://github.com/auriocus/tksvg
 The implementation is using nanosvg. It has no other external dependencies
 and is only 2 header files.
 
+**nanosvg** was choosen because it:
+
+- has a suitable license
+- is written in 2 plain C header files and can easily included
+- is really lightweight
+- is tested with tksvg
+- can render images
+- has no other external dependencies
+
 The original nanosvg project is hosted at https://github.com/memononen/nanosvg
 
 # Specification
 
 The already existing tksvg extension will be adapted and included in Tk.
 A new image format will be created. The name is **svgnano**.
+The choosen name hints the usage of a not fully compatible svg parser.
+It leaves the image name **svg** open for further usage.
 
 The **svgnano** image format has the following format suboptions:
 
@@ -44,18 +55,108 @@ The **svgnano** image format has the following format suboptions:
 
 *yValue* is used to move the created image in y-direction. The default value is 0.
 .
+The given format options are only used at creation time of the image and are not preserved in the image.
+
+# Supported SVG
+
 The svgnano format supports a wide range of SVG features, but something may be missing p.e. text.
+
+## Elements
+
+- g
+- path
+- rect
+- circle
+- ellipse
+- line
+- polyline
+- polygon
+- linearGradient
+- radialGradient
+- stop
+- defs
+- svg
+- style
+
+## Attributes
+
+- width, height
+- viewBox
+- preserveAspectRatio with none, xMin, xMid, xMax, yMin, yMid, yMax, slice
+
+## Gradient Attributes
+
+- gradientUnits with objectBoundingBox
+- gradientTransform
+- cx, cy, r
+- fx, fy
+- x1, y1, x2, y2
+- spreadMethod with pad, reflect or repeat
+- xlink:href
+
+## Poly Attributes
+
+- points
+
+## Line Attributes
+
+- x1, y1, x2, xy2
+
+## Ellipse Attributes
+
+- cx, cy
+- rx, ry
+
+## Circle Attributes
+
+- cx, cy
+- r
+
+## Rectangle Attributes
+
+- x, y
+- width, height
+- rx, ry
+
+## Path Attributes
+
+- d with m, M, l, L, h, H, v, V, c, C, s, S, q, Q, t, T, a, A, z, Z
+
+## Style Attributes
+
+- display with none, visibility, hidden, visible
+- fill with nonzero, evenodd
+- opacity
+- fill-opacity
+- stroke
+- stroke-width
+- stroke-dasharray
+- stroke-dashoffset
+- stroke-opacity
+- stroke-linecap with butt, round, square
+- stroke-linejoin with miter round bevel
+- stroke-miterlimit
+- fill-rule
+- font-size
+- transform with matrix, translate, scale, rotate, skewX, skewY
+- stop-color
+- stop-opacity
+- offset
+- id
+- class
 
 # Discussion
 
-- nanosvg is no full svg library
-- the name of the image format should mention this (p.e. **nanosvg** or
-**svgnano**)
-- are there better libraries with our requirements (C only, license)?
+- http://code.activestate.com/lists/tcl-core/19871/
+- http://code.activestate.com/lists/tcl-core/19994/
+
+## Open questions
+
+- are all of the above format options necessary? May be remove the *xValue* abd *yValue* options.
 
 # Implementation
 
-A patch implementing these changes will be available in the fossil repository in the [tip-507 branch]
+A patch implementing these changes is available in the fossil repository in the [tip-507 branch]
 (https://core.tcl.tk/tk/timeline?r=tip-507).
 
 The new format is in the photo.n man page described.
