Record the outcome of the recent discussions about TIP #507

--- a/tip/507.md
+++ b/tip/507.md
@@ -11,7 +11,7 @@
 
 # Abstract
 
-Tk needs scalable images on high res mobile devices.
+Tk needs scalable images on high res mobile devices. This TIP proposes to let Tk be able to read an SVG image (plus information about orientation and pixel scale) and make it into a photo. It is therefore a (lossy and single direction) conversion operation from an SVG format to a pixel format.
 
 # Rationale
 
@@ -19,7 +19,7 @@ Tk is running on desktop and mobile devices. The out of the box image formats
 do not scale and are to tiny on high res mobile devices.
 The same goes for the image formats provided by the img extension.
 
-There is already an tk image extension at https://github.com/auriocus/tksvg
+There is already a Tk image extension at https://github.com/auriocus/tksvg
 The implementation is using nanosvg. It has no other external dependencies
 and is only 2 header files.
 
@@ -49,17 +49,21 @@ The **svgnano** image format has the following format suboptions:
 
 *scaleValue* is used to scale the resulting image. The value must be greater then 0.0. The default value is 1.
 
-*unitValue* is the unit of all coordinates in the svg data. Available units are px (default, coordinates in pixel), mm , cm and in.
+*unitValue* is the unit of all coordinates in the svg data. Available units are px (default, coordinates in pixel), pt (1/72 inch), pc (12 pt), mm, cm and in.
 
 *xValue* is used to move the created image in x-direction. The default value is 0.
 
 *yValue* is used to move the created image in y-direction. The default value is 0.
-.
-The given format options are only used at creation time of the image and are not preserved in the image.
+
+The given format options are only used at creation time of the image and are not preserved in the image. This means that:
+
+  1. **$img data -format svgnano** triggers error **"image string format "svgnano" is not supported"**
+  
+  2. **$img configure -format {svgnano -scale 2} ; $img configure -format {svgnano -x 10}    ;** # the second call takes -scale as the default value (1)
 
 # Supported SVG
 
-The svgnano format supports a wide range of SVG features, but something may be missing p.e. text.
+The svgnano format supports a wide range of SVG features, however some features (e.g. 'text') are missing and silently ignored when reading the SVG data.
 
 ## Elements
 
@@ -100,7 +104,7 @@ The svgnano format supports a wide range of SVG features, but something may be m
 
 ## Line Attributes
 
-- x1, y1, x2, xy2
+- x1, y1, x2, y2
 
 ## Ellipse Attributes
 
@@ -152,14 +156,14 @@ The svgnano format supports a wide range of SVG features, but something may be m
 
 ## Open questions
 
-- are all of the above format options necessary? May be remove the *xValue* abd *yValue* options.
+- Are all of the above format options necessary? May be remove the *xValue* and *yValue* options.
 
 # Implementation
 
 A patch implementing these changes is available in the fossil repository in the [tip-507 branch]
 (https://core.tcl.tk/tk/timeline?r=tip-507).
 
-The new format is in the photo.n man page described.
+The new format is described in the photo.n man page.
 
 # Example of use
 
@@ -185,7 +189,9 @@ The new format is in the photo.n man page described.
 
 # Alternatives
 
-- using another library with full svg support
+- Use of another library with full svg support instead of the current proposal for partial support: could be done as a further step.
+
+- Direct manipulation of SVG vector graphics (as opposed to the present proposal of converting SVG to pixel format in a photo) would be desirable. However this can always be done later, for instance in the frame of the canvas widget. It is deemed an already large improvement to have Tk be able to read SVG images and convert them to pixel-based photos.
 
 # Copyright
 
