Added pointer to tip474 documentation

--- a/tip/474.md
+++ b/tip/474.md
@@ -102,7 +102,7 @@ platform-independence.
 
 # Reference Implementation
 
-No implementation yet.
+In tk branch tip474-uniform-mouse-wheel.
 
 # Copyright
 
