EEscape "<<" in markdown to show it literally

--- a/tip/454.md
+++ b/tip/454.md
@@ -104,11 +104,11 @@ But that is a side effect of fixing this bug.
 
 # Rejected Proposal
 
-Another proposal is to invoke the virtual event <<GeometryManager>> when the last children is unpacked/ungridded/destroyed.
+Another proposal is to invoke the virtual event \<\<GeometryManager\>\> when the last children is unpacked/ungridded/destroyed.
 
 Emiliano has provided a ticket 2863003fff <https://core.tcl.tk/tk/info/2863003fff>  with the implementation in branch bug-d6b95ce492 <https://core.tcl.tk/tk/timeline?r=bug-d6b95ce492&nd&c=2016-09-21+06%3A32%3A55&n=200> :
 
-The virtual event **<<GeometryManager>>** is defined which informs the master \(a frame-like widget\) that it has no child widget any more and that its size is not managed any more by grid/pack.
+The virtual event **\<\<GeometryManager\>\>** is defined which informs the master \(a frame-like widget\) that it has no child widget any more and that its size is not managed any more by grid/pack.
 
 The program may bind to this event and resize to size 1x1:
 
