--- a/tip/518.md
+++ b/tip/518.md
@@ -29,7 +29,7 @@ Another example is the scrolledwindow example by Emiliano in ticket 2863003fff <
 A typical workaround is to configure the width/height manually after the last children was unmapped.
 Unfortunately, this fact may not be determined for example by scrolling widgets etc. An eventual Configure binding is not firing.
 
-Within this TIP, a new virtual event <<NoManagedChilds>> is fired to inform about no remaining childs.
+Within this TIP, a new virtual event \<\<NoManagedChilds\>\> is fired to inform about no remaining childs.
 
 # Example
 
@@ -92,7 +92,7 @@ With the proposed patch applied, an additional event is fired the removal of the
 
 # Proposal
 
-The proposal is to fire the new virtual event <<NoManagedChilds>> if the last children is unpacked/ungridded/destroyed.
+The proposal is to fire the new virtual event \<\<NoManagedChilds\>\> if the last children is unpacked/ungridded/destroyed.
 A managing widget may bind to this event and do the resize of the widget or other appropriate action.
 
 Here are additional lines for the example above.
