Fix formatting bug in 426. Clarify a bit of confusing wording.

--- a/tip/426.md
+++ b/tip/426.md
@@ -59,7 +59,7 @@ The supporting public C functions shall be:
  > void **Tcl\_RegisterCommandTypeName**\(Tcl\_ObjCmdProc
    *_implementationProc_, const char \*_nameStr_\)
 
-	 > const char \* **Tcl\_GetCommandTypeName**\(Tcl\_Command _command_\)
+ > const char \* **Tcl\_GetCommandTypeName**\(Tcl\_Command _command_\)
 
 **Tcl\_RegisterCommandTypeName** will associate a particular
 implementation function, _implementationProc_, with an \(assumed
@@ -80,15 +80,21 @@ will be returned instead. The result will never be NULL.
 The following command types are guaranteed to be among the set defined
 by default, but others may be done as well.
 
- proc: Procedures defined by the **proc** command.
+**proc**: Procedures defined by the **proc** command. Introspection
+commands like **info body** may be used (without error due to the
+command not being a procedure).
 
- alias: Aliases defined by the **interp alias** command.
+**alias**: Aliases defined by the **interp alias** command, which will
+be able to perform introspection on it. _Inter-interpreter aliases are
+not required to report themselves this way to the slave interpreter._
 
- ensemble: Ensembles defined by the **namespace ensemble** command.
+**ensemble**: Ensembles defined by the **namespace ensemble** command.
 
- import: Commands imported by the **namespace import** command.
+**import**: Commands imported by the **namespace import** command.
 
- object: Object \(or class\) defined by instantiating any TclOO class.
+**object**: Object \(or class\) defined by instantiating any TclOO
+class.  The introspection command **info object** may be used (without
+error due to the command not being an object).
 
 ## Impact on Tk
 
@@ -104,4 +110,3 @@ be of type **tk::widgetFactory**.
 # Copyright
 
 This document has been placed in the public domain.
-
