TIP518: discussion why not use virtual event <<Configure>> instead <<NoManagedChild>>. Use consistently <<NoManagedChild>> (not <<NoManagedChilds>>)

--- a/tip/518.md
+++ b/tip/518.md
@@ -29,7 +29,7 @@ Another example is the scrolledwindow example by Emiliano in ticket 2863003fff <
 A typical workaround is to configure the width/height manually after the last children was unmapped.
 Unfortunately, this fact may not be determined for example by scrolling widgets etc. An eventual Configure binding is not firing.
 
-Within this TIP, a new virtual event \<\<NoManagedChilds\>\> is fired to inform about no remaining childs.
+Within this TIP, a new virtual event \<\<NoManagedChild\>\> is fired to inform about no remaining childs.
 
 # Example
 
@@ -92,7 +92,7 @@ With the proposed patch applied, an additional event is fired the removal of the
 
 # Proposal
 
-The proposal is to fire the new virtual event \<\<NoManagedChilds\>\> if the last children is unpacked/ungridded/destroyed.
+The proposal is to fire the new virtual event \<\<NoManagedChild\>\> if the last children is unpacked/ungridded/destroyed.
 A managing widget may bind to this event and do the resize of the widget or other appropriate action.
 
 Here are additional lines for the example above.
@@ -103,12 +103,6 @@ Here are additional lines for the example above.
         }
 	bind .c.f <<NoManagedChild>> frameNoChild
 
-# Rejected Proposal
-
-TIP 454 <https://core.tcl.tk/tips/doc/trunk/tip/454.md> has proposed to set the size of the widget automatically to 1x1 (the initial size if no widget packed/gridded).
-
-Please read the discussion within the TIP which led to withdraw the proposal.
-
 # Reference Implementation
 
 Emiliano has provided a ticket 2863003fff <https://core.tcl.tk/tk/info/2863003fff>  with the implementation in branch bug-d6b95ce492 <https://core.tcl.tk/tk/timeline?r=bug-d6b95ce492&nd&c=2016-09-21+06%3A32%3A55&n=200>.
@@ -117,6 +111,26 @@ This solution is now continued with the tag "tip518-event-last-child-unmanaged".
 
 Koen Dankart and Francois Vogel have worked on the solution of the similar tip474, which is available in branch bug-d6b95ce492-alt: <http://core.tcl.tk/tk/timeline?r=bug-d6b95ce492-alt&nd&c=2016-09-22+09%3A16%3A21&n=200> .
 This information may eventually also be relevant.
+
+# Rejected Proposal
+
+TIP 454 <https://core.tcl.tk/tips/doc/trunk/tip/454.md> has proposed to set the size of the widget automatically to 1x1 (the initial size if no widget packed/gridded).
+
+Please read the discussion within the TIP which led to withdraw the proposal.
+
+# Discussion
+
+## Why not use the event name \<\<Configure\>\> ?
+
+This is a logical and elegant proposal.
+
+TIP 454 was withdrawn due to:
+
+   1. if the geometry manager is changed (ex: pack to grid), there is a flickering introduced.
+   2. an additional Configure event was introduced which breaks present script.
+
+To invoke \<\<Configure\>\> instead \<\<NoManagedChild\>\> would trigger incompatibility 2 of TIP454.
+Due to that, a new virtual event is proposed.
 
 # Copyright
 
