TIP #517 accepted 8/0/0: YES: 8 (Decoster, Fellows, Griffin, Kenny, Kupries, Landers, Nijtmans, Vogel). NO: -. PRESENT: -. Vote conclusion email was sent 23-Sep-2018 to Tcl Core list. Implementation was merged same day.

--- a/tip/517.md
+++ b/tip/517.md
@@ -1,8 +1,8 @@
 # TIP 517: Add -activerelief Configuration Option to the menu widget
 	Author:         Francois Vogel <fvogelnew1@free.fr>
-	State:          Voting
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        13-Sept-2018
 	Post-History:
 	Keywords:       tk menu
