Textual updated for TIP's #494 and #514

--- a/tip/494.md
+++ b/tip/494.md
@@ -47,7 +47,8 @@ On 64-bit platforms, those changes cause binary incompatibility. Therefore the T
 # Implications
 
 Although those changes are binary compatible on 32-bit platforms, there is a small potential source incompatibility.
-There are 10 functions which previously had an _int_ return argument, which is changed to _size\_t_. This signed/unsigned change might lead to subtle difference in behavior.
+There are 10 functions which previously had an _int_ return argument, which is changed to _size\_t_ (for now, see below).
+This signed/unsigned change might lead to subtle difference in behavior.
 
 The 10 functions are:
 
@@ -81,6 +82,16 @@ There are 2 other ways to make this change, which can do it without the use of t
   * Don't compare to -1 using < or >, but always to TCL\_IO\_FAILURE using == or != . E.g. [as here](https://core.tcl.tk/tk/info/abe0d3b121cbb12d)
 
 Tk and [sqlite](http://cyqlite.sourceforge.net/cgi-bin/sqlite/info/17c148b94008df81) are already converted to make full use of TIP #494. Other extensions included with Tcl (e.g. tdbc) are unaffected.
+
+# Open issues
+
+There has been discussion, whether the return-type of these 10 functions (and possibly other functions) should actually be size\_t or maybe some other type.
+A Tcl-specific type *Tcl\_Size* could also be defined for this. Actually, this TIP provides 2 possibilities: Without -D_TCL\_8\_COMPAT_, the type is size\_t, with -D_TCL\_8\_COMPAT_ it is Tcl_WideInt.
+This gives enough room for experimenting which one is best, maybe it would be better to make it ssize\_t or ptrdiff\_t.
+
+There - for sure - will be more future TIP's, which propose more API changes for 9.0.
+This one - definitely - is not the last one.
+So, this TIP doesn't make a final decision yet what will be the final type returned by those 10 functions.
 
 # Implementation
 
