--- a/tip/514.md
+++ b/tip/514.md
@@ -14,8 +14,7 @@
 This TIP proposes to resolve the platform differences between int/wide/entier math functions and commands like "sting is integer"/"string is wide"/"string is entier".
 At the script level it should not be relevant whether the platform is 32-bit or 64-bit any more.
 
-Most Tcl command already accept unlimited integers, so there are hardly any commands left which need to checked for correct range.
-A few lacking places (e.g. "binary scan" and "binary format"), are corrected as part of this TIP implementation.
+Most Tcl commands already accept unlimited integers, so there are hardly any commands left which need to checked for correct range.
 
 # Rationale
 
@@ -70,7 +69,11 @@ So, int() does either 32-bit or 64-bit truncation, but the highest left-over bit
 
  * On all platforms, "string is integer" will become synonym to "string is entier".
    So these functions will report true (1) if the number looks like an integer with unlimited range.
-   The "string is wideinteger" and "string is entier" commands will become deprecated in Tcl 9.0, but they will not be removed yet.
+
+ * On all platforms, "string is wideinteger" will start checking for the proper 64-bit signed range.
+   So this functions will only report true (1) if the value is in the range of -9223372036854775808..9223372036854775807
+
+ * The "string is wideinteger" and "string is entier" commands will become deprecated in Tcl 9.0, but they will not be removed yet.
 
  * The C function Tcl\_GetIntFromObj() is changed to return TCL\_OK if the Tcl_Obj contains a value in the range of -2147483648..4294967295. So,
    it succeeds if the number fits in either a platform "int", either a platform "unsigned int" type.
@@ -88,7 +91,7 @@ So, int() does either 32-bit or 64-bit truncation, but the highest left-over bit
  * int() can no longer be used for 32-bit/64-bit (platform-dependant) truncation.
 
  * If you still really want to protect some command argument from overflowing, Use Tcl\_GetWideIntFromObj() in this command, and use "string is wide" to check for proper range.
-   But - still better - is use Tcl\_GetWideIntFromObj(), with falling back to Tcl\_GetBignumFromObj() if the range requires it.
+   But - still better - is use Tcl\_GetWideIntFromObj(), while falling back to Tcl\_GetBignumFromObj() if the range requires it.
    That's what Tcl itself is doing almost everywhere to prevent under/overflow errors.
 
 # Implementation
