3 more TIP's in voting

--- a/tip/514.md
+++ b/tip/514.md
@@ -2,7 +2,7 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        20-Aug-2018
 	Post-History:   
 	Keywords:       Tcl
@@ -14,7 +14,7 @@
 This TIP proposes to resolve the platform differences between int/wide/entier math functions and commands like "sting is integer"/"string is wide"/"string is entier".
 At the script level it should not be relevant whether the platform is 32-bit or 64-bit any more.
 
-Most Tcl commands already accept unlimited integers, so there are hardly any commands left which need to checked for correct range.
+Most Tcl commands already accept unlimited integers, so there is hardly any command left which need to checked for correct range.
 
 # Rationale
 
@@ -75,7 +75,7 @@ So, int() does either 32-bit or 64-bit truncation, but the highest left-over bit
 
  * The "string is wideinteger" and "string is entier" commands will become deprecated in Tcl 9.0, but they will not be removed yet.
 
- * The C function Tcl\_GetIntFromObj() is changed to return TCL\_OK if the Tcl_Obj contains a value in the range of -2147483648..4294967295. So,
+ * The C function Tcl\_GetIntFromObj() is changed to return TCL\_OK if the Tcl\_Obj contains a value in the range of -2147483648..4294967295. So,
    it succeeds if the number fits in either a platform "int", either a platform "unsigned int" type.
 
  * The C function Tcl\_GetWideIntFromObj() is changed to return TCL\_OK if the Tcl\_Obj contains a value in the range of -9223372036854775808..9223372036854775807.
@@ -88,7 +88,7 @@ So, int() does either 32-bit or 64-bit truncation, but the highest left-over bit
  * "string is integer" can no longer be used to check for a specific range.
    That doesn't matter any more, because the command argument that was being protected, doesn't throw an exception any more in case of under/overflow since the introduction of bignums.
 
- * int() can no longer be used for 32-bit/64-bit (platform-dependant) truncation.
+ * int() can no longer be used for 32-bit/64-bit (platform-dependent) truncation.
 
  * If you still really want to protect some command argument from overflowing, Use Tcl\_GetWideIntFromObj() in this command, and use "string is wide" to check for proper range.
    But - still better - is use Tcl\_GetWideIntFromObj(), while falling back to Tcl\_GetBignumFromObj() if the range requires it.
