--- a/tip/494.md
+++ b/tip/494.md
@@ -2,7 +2,7 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        29-Dec-2017
 	Post-History:
 	Keywords:       tcl
