--- a/tip/502.md
+++ b/tip/502.md
@@ -2,7 +2,7 @@
 	Author:         Don Porter <dgp@users.sourceforge.net>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        26-Feb-2018
 	Post-History:   
 	Tcl-Version:	8.7
