--- a/tip/508.md
+++ b/tip/508.md
@@ -1,6 +1,6 @@
 # TIP 508: New subcommand [array default]
 	Author:         Frédéric Bonnet <fredericbonnet@free.fr>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        13-May-2018
