undo stray delete

--- a/tip/426.md
+++ b/tip/426.md
@@ -10,7 +10,7 @@
 	Vote-Results:   4/2/3 accepted
 	Votes-For:      DKF, BG, JN, JD
 	Votes-Against:  DGP, AK
-	Votes-Present:  KBK, FV, S
+	Votes-Present:  KBK, FV, SL
 -----
 
 # Abstract
