TIPs 515 and 516 implemented

--- a/tip/515.md
+++ b/tip/515.md
@@ -1,6 +1,6 @@
 # TIP 515: Level Value Reform
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        7-Sept-2018
