--- a/tip/516.md
+++ b/tip/516.md
@@ -1,6 +1,6 @@
 # TIP 516: More OO Slot Operations
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        7-Sept-2018
