--- a/tip/505.md
+++ b/tip/505.md
@@ -1,6 +1,6 @@
 # TIP 505: Make [lreplace] Accept All Out-of-Range Index Values
 	Author:         Don Porter <dgp@users.sourceforge.net>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        26-Mar-2018
