--- a/tip/509.md
+++ b/tip/509.md
@@ -81,7 +81,7 @@ accessible through a `pthread_key_t` data key. This counter keeps track of the
 number of calls to `Tcl_MutexLock` minus the number of calls to
 `Tcl_Mutex_Unlock`. `Tcl_MutexLock` increments the counter, but only calls
 `pthread_mutex_lock` when the initial value is zero. `Tcl_Mutex_Unlock` behaves
-symmetrically: it decrements the counter, and only calls `pthread_mutex_lock`
+symmetrically: it decrements the counter, and only calls `pthread_mutex_unlock`
 when it reaches zero. This ensures that a thread never calls 
 `pthread_mutex_lock` twice on the same mutex, and only calls 
 `pthread_mutex_unlock` when the thread no longer holds it.
