--- a/tip/509.md
+++ b/tip/509.md
@@ -1,6 +1,6 @@
 # TIP 509: Implement reentrant mutexes on all platforms
 	Author:         Frédéric Bonnet <fredericbonnet@free.fr>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        24-May-2018
