Vote done for #494, #502 and #514

--- a/tip/494.md
+++ b/tip/494.md
@@ -1,8 +1,8 @@
 # TIP 494: More use of size_t in Tcl 9
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        29-Dec-2017
 	Post-History:
 	Keywords:       tcl
