--- a/tip/502.md
+++ b/tip/502.md
@@ -1,8 +1,8 @@
 # TIP 502: Index Value Reform
 	Author:         Don Porter <dgp@users.sourceforge.net>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        26-Feb-2018
 	Post-History:   
 	Tcl-Version:	8.7
