--- a/tip/514.md
+++ b/tip/514.md
@@ -1,8 +1,8 @@
 # TIP 514: Platform differences in handling int/wide
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        20-Aug-2018
 	Post-History:   
 	Keywords:       Tcl
